# Control

./: .gitignore  README.md
cerberus_bringup/config/: cerberus.yaml  cerberus_msg.yaml  cerberus_single_leg.yaml
cerberus_bringup/launch/: cerberus_control.launch.py  cerberus_odrive.launch.py  cerberus_sim_walk.launch.py  cerberus_two_axis_trajectory.launch.py
cerberus_controller/: CMakeLists.txt
cerberus_controller/include/cerberus_controller/: BufferManager.hpp
cerberus_controller/src/: BufferManager.cpp  InputEncoder.cpp  inference.cpp
cerberus_description/urdf/: cerberus_odrive.urdf.xacro  cerbiboi.urdf.xacro  leg_macro.xacro
cerberus_gazebo/: CMakeLists.txt
cerberus_gazebo/include/cerberus_gazebo/: BasicSystem.hh  FullSystem.hh
cerberus_gazebo/worlds/: cerberus.sdf
cerberus_sim_pid/: package.xml  setup.cfg  setup.py
cerberus_sim_pid/cerberus_sim_pid/: effort_pid.py
cerberus_ws/: Tests
cerberus_ws/cerberus_isaac/cerberus/: cerberus.py
cerberus_ws/cerberus_isaac/models/: Blind_no_longer_crawling.onnx  Stiffer_Blind.onnx  blind_better.onnx  blind_new.onnx  stiff-shoulders.pt
cerberus_ws/install/: local_setup.sh  setup.sh
cerberus_ws/install/cerberus_bringup/share/cerberus_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml  package.zsh
cerberus_ws/install/cerberus_controller/share/cerberus_controller/: local_setup.sh  package.dsv  package.sh  package.xml
cerberus_ws/install/cerberus_description/share/cerberus_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.sh  package.xml
cerberus_ws/install/cerberus_gazebo/share/cerberus_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  (+2 more)
cerberus_ws/log/: latest_build
cerberus_ws/src/cerberus/cerberus_bringup/: CMakeLists.txt
cerberus_ws/src/cerberus/cerberus_controller/: CMakeLists.txt
cerberus_ws/src/cerberus/cerberus_training/: package.xml
cerberus_ws/src/cerberus_final/cerberus_bringup/: package.xml
cerberus_ws/src/cerberus_final/cerberus_description/: CMakeLists.txt  package.xml
cerberus_ws/src/cerberus_final/cerberus_training/: CMakeLists.txt
cerberus_ws/src/cerberus_leg_loop/: setup.cfg  setup.py
cerberus_ws/src/cerberus_leg_loop/cerberus_leg_loop/: RepeatingTrajectoryNode.py
cerberus_ws/src/install/: local_setup.sh  setup.sh
cerberus_ws/src/python_scripts/: calibrate.py  conf.py  test.py
cerberus_ws/src/python_scripts/Robot_assembled/: Driver_setup  PreCalibrated.py  calibrate.py  conf.py  run.py
odrive_hardware_interface/include/odrive_hardware_interface/: odrive_usb.hpp
(+227 files in other folders)
